--- a/Exploring/Properties/launchSettings.json
+++ b/Exploring/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "ClassTypes": {
+    "Exploring": {
       "commandName": "Project",
       "commandLineArgs": "1123581321"
     }
